# RAG-with-FastAPI

./: .dockerignore  Dockerfile  check_imports.py  check_structure.py  pyproject.toml  test_process.py
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  chat.py  documents.py
app/core/: __init__.py  security.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/models/: __init__.py  conversation.py  document.py  user.py
app/rag/: __init__.py  pipeline.py
app/rag/llm/: ollama_client.py  tool_executor.py  tools.py
app/rag/processing/: chunking.py  docling.py  embedding.py
app/rag/retrieval/: __init__.py  bm25_retriever.py  hybrid_retriever.py  reranker.py  vector_retriever.py
app/rag/workflow/: __init__.py  graph.py  nodes.py  state.py
app/schemas/: __init__.py  conversation.py  document.py  user.py
app/services/: __init__.py  auth_service.py  chat_service.py  document_service.py  history_service.py
app/utils/: __init__.py  helpers.py  logger.py
scripts/: __init__.py  create_admin.py
storage/: app.db
storage/chroma/: chroma.sqlite3
