[project]
name = "rag-fastapi-project"
version = "0.1.0"
description = "Advanced RAG system with FastAPI, Ollama, LangGraph, and ChromaDB"
requires-python = ">=3.10"

dependencies = [
    # FastAPI & Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # Database
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    # Pydantic
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    # LangChain & LangGraph
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    # Vector Database & Search
    "chromadb>=0.4.22",
    "rank-bm25>=0.2.2",
    # Ollama
    "ollama>=0.1.6",
    # Document Processing
    "pypdf>=3.17.4",
    "python-docx>=1.1.0",
    "docling>=1.0.0",
    "docling-core>=1.0.0",
    "docling-parse>=1.0.0",
    # Utilities
    "networkx>=3.2.1",
    "sentence-transformers>=5.2.2",
]
